<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:id="@+id/nameLinear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/githubIdLinear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintVertical_chainStyle="packed">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/write_name"
            android:importantForAutofill="no"
            android:inputType="text" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/githubIdLinear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/pwLinear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameLinear">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/github_id"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/idET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/write_id"
            android:importantForAutofill="no"
            android:inputType="text" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/pwLinear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/signUpBt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/githubIdLinear">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pw"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/pwET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/write_pw"
            android:importantForAutofill="no"
            android:inputType="textPassword" />


    </LinearLayout>

    <Button
        android:id="@+id/signUpBt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:text="@string/signup"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>